added find and kruroplastic pages

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<div id="header-tel-js" class="header-tel">+7 (495) 266-79-58</div>
 						</div>
 						<div class="header-buttons-wrapper clearfix">
-							<a class="header-search-icon"></a>
+							<a class="header-search-icon" href="#"></a>
 							<a id="close-icon-js" class="header-close-icon"></a>
 							<a id="burger-icon-js" class="header-burger-icon"></a>
 						</div>
@@ -176,7 +176,7 @@
 
 									<div class="model-point point1 model-point-js">
 										<span class="line"></span>
-										<a id="lin123" class="link" href="http://ya.ru">Остановить выпадение волос</a>
+										<a id="lin123" class="link" href="#">Остановить выпадение волос</a>
 									</div>
 
 									<div class="model-point point2 model-point-js">
