--- a/pages/find.html
+++ b/pages/find.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="ru">
 	<head>
-		<title>Контакты</title>
+		<title>Поиск</title>
 
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -25,12 +25,11 @@
 		<script src="../js/vendor/fancybox/jquery.fancybox.pack.js"></script>
 		<script src="../js/vendor/slick.js/slick.min.js"></script>
 		<script src="../js/main.js"></script>
+
 	</head>
 	
 	<body>
-
 	<div class="container">
-
 		<main>
 
 			<!--HEADER-->
@@ -76,87 +75,128 @@
 
 			<section class="block-content">
 
-				<div class="site-wrap contacts">
+				<div class="site-wrap">
 
 					<div class="block-breadcrumbs">
-						<a class="breadcrumbs-link" href="#">Главная</a>	/	<a class="breadcrumbs-link" href="#">О клиниках</a> / <span class="breadcrumbs-current">Контакты</span>
+						<a class="breadcrumbs-link" href="">Главная</a>	/	<span class="breadcrumbs-current">Процедуры</span>
 					</div>
 
-					<section class="block-contacts">
-						<h2 class="contacts-title title">Контакты</h2>
-						<div class="contacts-wrapper">
-							<div class="contacts-town-switcher">
-								<div class="contacts-town active">Москва</div>
-								<div class="contacts-town">Екатеринбург</div>
+					<section class="block-find">
+
+						<h2 class="find-title title">Поиск по услугам клиники “Реформа”</h2>
+
+						<div class="find-form-wrapper">
+							<form class="find-form" name="find-form" method="post" action="#">
+								<div class="find-search-wrapper"><input class="priceuslugi-search" type="search" placeholder="Хирургия"></div>
+							</form>
+						</div>
+
+						<div class="find-filters">
+							<span class="find-filter relevance">По релевантности</span>
+							<span class="find-filter date active">По дате</span>
+						</div>
+
+						<div class="find-results">
+
+							<div class="find-result">
+								<h3 class="result-title">Пластическая <b>хирургия</b></h3>
+								<div class="result-text"><p>Пластическая <b>хирургия</b> – это самый эффективный и радикальный метод устранения косметических дефектов и возрастных изменений кожи. Блефаропластика.</p></div>
+								<div class="result-date">Изменен: <span>04.05.2017</span> </div>
+								<div class="result-path">Путь: <a href="#">Главная / Процедуры</a> </div>
 							</div>
-							<div class="contacts-stations">
-								<div class="contacts-station active">Таганская</div>
-								<div class="contacts-station">Новослободская</div>
+
+							<div class="find-result">
+								<h3 class="result-title">Липосакция бедер</h3>
+								<div class="result-text"><p>... Дооперационный период. 
+Поиск клиники, в которой вы будете проходить процедуру удаления лишнего жира. Рекомендуем исходить из опытности <b>хирургов</b>, количества проведенных операций, наличия современного оборудования. Консультация 
+с <b>хирургом</b>.</p></div>
+								<div class="result-date">Изменен: <span>24.04.2017</span> </div>
+								<div class="result-path">Путь: <a href="#">Главная / Процедуры</a> </div>
 							</div>
-							<div class="contacts-info">
-								<div class="contacts-adress"><span>Пестовский пер., д.5</span><a href="">Схема</a></div>
-								<div class="contacts-working-hours"><span>пнд-вскр 9:00 - 21:00</span></div>
-								<div class="contacts-tel"><span>+7 (495) 266 79 57</span></div>
+
+							<div class="find-result">
+								<h3 class="result-title">Эндоскопическая подтяжка лица</h3>
+								<div class="result-text"><p>Эндоскопическая техника проведения операций – это передовой метод, используемый 
+в хирургии относительно недавно, 
+но уже успевший зарекомендовать себя с самой лучшей стороны.</p></div>
+								<div class="result-date">Изменен: <span>26.04.2017</span> </div>
+								<div class="result-path">Путь: <a href="#">Главная / Процедуры</a> </div>
 							</div>
-							<div class="contacts-map">
-								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2245.739820560401!2d37.657252615930254!3d55.74564948055145!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54ae94d6faf05%3A0x5ceb8230678431bb!2z0J_QtdGB0YLQvtCy0YHQutC40Lkg0L_QtdGALiwgNSwg0JzQvtGB0LrQstCwLCAxMDkwMDQ!5e0!3m2!1sru!2sru!4v1493530333661" allowfullscreen></iframe>
+
+							<div class="find-result">
+								<h3 class="result-title">Лазерная блефаропластика</h3>
+								<div class="result-text"><p>... традиционным хирургическим вмешательством, за исключением того, что все разрезы выполняются при помощи лазера. Благодаря данному оборудованию <b>хирург</b> может полностью видеть оперируемую область, поскольку 
+луч является прозрачным.</p></div>
+								<div class="result-date">Изменен: <span>24.04.2017</span> </div>
+								<div class="result-path">Путь: <a href="#">Главная / Процедуры</a> </div>
 							</div>
+
+							<div class="find-result">
+								<h3 class="result-title">Ринопластика</h3>
+								<div class="result-text"><p>... всю жизнь с ощущением собственного несовершенства совершенно необязательно, достаточно обратиться 
+к квалифицированному пластическому <b>хирургу</b> за услугой ринопластики. А бывает, 
+что человека не беспокоит несимметричность и внешний вид носа, но из-за смещенной носовой перегородки...</p></div>
+								<div class="result-date">Изменен: <span>4.04.2017</span> </div>
+								<div class="result-path">Путь: <a href="#">Главная / Процедуры</a> </div>
+							</div>
+
+						</div>
+
+					</section>
+
+						<div class="block-pagination">
+							<div class="pagination-wrapper">
+								<button class="pagination-control prev"></button>
+								<button class="pagination-control next"></button>
+								<a class="pagination-item active" href="#">1</a>
+								<a class="pagination-item" href="#">2</a>
+								<span class="pagination-dots"></span>
+								<a class="pagination-item" href="#">5</a>
+							</div>
+						</div>
+
+					<a class="content-appointment button appointment-js" href="#show">Записаться на приём</a>
+
+					<section class="block-star">
+						<div class="star-description"><span>Звезда рекомендует:</span></div>
+						<div class="star-foto">
+							<img src="../images/star-recommend4.png" width="194" height="194"	alt="Елена Яковлева">
+						</div>
+						<div class="star-name">Елена Яковлева</div>
+					</section>
+
+					<section class="block-services">
+						<div class="services-items">
+							<a class="services-item" href="#">
+								<div class="services-item-image section1"></div>
+								<h3 class="services-item-title">Пластическая хирургия</h3>
+							</a>
+							<a class="services-item column2" href="#">
+								<div class="services-item-image section2"></div>
+								<h3 class="services-item-title">Аппаратная косметология</h3>
+							</a>
+							<a class="services-item" href="#">
+								<div class="services-item-image section3"></div>
+								<h3 class="services-item-title">Лазерный центр</h3>
+							</a>
+							<a class="services-item column2" href="#">
+								<div class="services-item-image section4"></div>
+								<h3 class="services-item-title">Инъекционная косметология</h3>
+							</a>
+							<a class="services-item" href="#">
+								<div class="services-item-image section5"></div>
+								<h3 class="services-item-title">Эстетическая косметология</h3>
+							</a>
+							<a class="services-item column2" href="#">
+								<div class="services-item-image section6"></div>
+								<h3 class="services-item-title">Подология</h3>
+							</a>
 						</div>
 					</section>
 
-						<section class="block-write-us">
-							<div class="write-us-wrapper">
-								<div class="write-us-title">Написать директору по развитию</div>
-								<form class="write-us-form" name="write-us-form" action="#">
-									<div class="form-group">
-										<input class="write-us-email form-element" type="email" name="write-us-email" tabindex="1" placeholder="Email">
-										<input class="write-us-tel form-element" type="tel" name="write-us-tel" tabindex="2" placeholder="Телефон">
-										<input class="write-us-name form-element" type="text" name="write-us-name" tabindex="3" placeholder="Ф.И.О">
-									</div>
-									<div class="form-group">
-										<textarea class="write-us-text form-element" name="write-us-text" cols="30" rows="10" tabindex="4" placeholder="Комментарий"></textarea>
-									</div>
-									<div class="form-group clearfix">
-										<div class="write-us-tip"><span>*</span> - Обязательные для заполнения поля</div>
-										<button class="write-us-submit" type="submit">Отправить</button>
-									</div>
-								</form>
-							</div>
-						</section>
+					<a class="content-all-services button" href="#">Просмотреть все услуги</a>
 
-						<div class="block-clinic-gallery">
-							<div class="clinic-gallery-wrapper clinic-gallery-js">
-
-								<div class="slide">
-									<div class="slide-image">
-										<img src="../images/gallery-foto.jpg" width="202" height="170" alt="Фотография клиники">
-									</div>
-								</div>
-
-								<div class="slide">
-									<div class="slide-image">
-										<img src="../images/gallery-foto.jpg" width="202" height="170" alt="Фотография клиники">
-									</div>
-								</div>
-
-								<div class="slide">
-									<div class="slide-image">
-										<img src="../images/gallery-foto.jpg" width="202" height="170" alt="Фотография клиники">
-									</div>
-								</div>
-
-								<div class="slide">
-									<div class="slide-image">
-										<img src="../images/gallery-foto.jpg" width="202" height="170" alt="Фотография клиники">
-									</div>
-								</div>
-								
-						</div>
-					</div>
-
-
-				<a class="content-appointment button appointment-js" href="#show">Записаться на приём</a>
-
+				</div>
 
 				<div class="block-modal-appointment" id="show">
 					<div class="modal-appointment-wrapper">
@@ -189,8 +229,6 @@
 							</div>
 						</form>
 					</div>
-				</div>
-				
 				</div>
 
 			</section>
