--- a/pages/priceuslugi.html
+++ b/pages/priceuslugi.html
@@ -37,12 +37,12 @@
 					<div class="header-wrapper clearfix">
 						<div class="header-logo-wrapper">
 							<div class="header-logo">
-								<a href="#"><img src="images/logo.png" width="161" height="57" alt="Логотип" /></a>
+								<a href="#"><img src="../images/logo.png" width="161" height="57" alt="Логотип" /></a>
 							</div>
 							<div id="header-tel-js" class="header-tel">+7 (495) 266-79-58</div>
 						</div>
 						<div class="header-buttons-wrapper clearfix">
-							<a class="header-search-icon"></a>
+							<a class="header-search-icon" href="#"></a>
 							<a id="close-icon-js" class="header-close-icon"></a>
 							<a id="burger-icon-js" class="header-burger-icon"></a>
 						</div>
@@ -119,7 +119,7 @@
 					<section class="block-star">
 						<div class="star-description"><span>Звезда рекомендует:</span></div>
 						<div class="star-foto">
-							<img src="../images/star-recommend5.png" width="194" height="194"	alt="Елена Яковлева">
+							<img src="../images/star-recommend4.png" width="194" height="194"	alt="Елена Яковлева">
 						</div>
 						<div class="star-name">Елена Яковлева</div>
 					</section>
