--- a/pages/specialist.html
+++ b/pages/specialist.html
@@ -38,12 +38,12 @@
 					<div class="header-wrapper clearfix">
 						<div class="header-logo-wrapper">
 							<div class="header-logo">
-								<a href="#"><img src="images/logo.png" width="161" height="57" alt="Логотип" /></a>
+								<a href="#"><img src="../images/logo.png" width="161" height="57" alt="Логотип" /></a>
 							</div>
 							<div id="header-tel-js" class="header-tel">+7 (495) 266-79-58</div>
 						</div>
 						<div class="header-buttons-wrapper clearfix">
-							<a class="header-search-icon"></a>
+							<a class="header-search-icon" href="#"></a>
 							<a id="close-icon-js" class="header-close-icon"></a>
 							<a id="burger-icon-js" class="header-burger-icon"></a>
 						</div>
