--- a/pages/specialists.html
+++ b/pages/specialists.html
@@ -37,12 +37,12 @@
 					<div class="header-wrapper clearfix">
 						<div class="header-logo-wrapper">
 							<div class="header-logo">
-								<a href="#"><img src="images/logo.png" width="161" height="57" alt="Логотип" /></a>
+								<a href="#"><img src="../images/logo.png" width="161" height="57" alt="Логотип" /></a>
 							</div>
 							<div id="header-tel-js" class="header-tel">+7 (495) 266-79-58</div>
 						</div>
 						<div class="header-buttons-wrapper clearfix">
-							<a class="header-search-icon"></a>
+							<a class="header-search-icon" href="#"></a>
 							<a id="close-icon-js" class="header-close-icon"></a>
 							<a id="burger-icon-js" class="header-burger-icon"></a>
 						</div>
@@ -102,6 +102,7 @@
 										</select>
 									</div>
 									<button class="filter-submit" type="submit">Применить фильтр</button>
+									<button class="filter-reset" type="reset">Сбросить</button>
 								</form>
 							</div>
 
@@ -109,9 +110,9 @@
 
 								<div class="specialists-item">
 									<div class="specialist">
-										<div class="specialist-foto">
-											<img src="../images/specialist1.png" width="216" height="216" alt="Специалист">
-										</div>
+											<a class="specialist-foto" href="#">
+												<img src="../images/specialist1.png" width="216" height="216" alt="Специалист">
+											</a>
 										<div class="specialist-name"><span>Михайлова</span><br> Наталья Павловна</div>
 										<div class="specialist-info">
 											<div class="position">Создатель и руководитель Авторских клиник «Реформа» by Dr. Mikhaylova, главный врач</div>
@@ -122,9 +123,9 @@
 
 								<div class="specialists-item">
 									<div class="specialist">
-										<div class="specialist-foto">
-											<img src="../images/specialist2.png" width="216" height="216" alt="Специалист">
-										</div>
+											<a class="specialist-foto" href="#">
+												<img src="../images/specialist2.png" width="216" height="216" alt="Специалист">
+											</a>
 										<div class="specialist-name"><span>Руденко</span><br> Светлана Викторовна</div>
 										<div class="specialist-info">
 											<div class="position">Главный врач</div>
@@ -135,9 +136,9 @@
 
 								<div class="specialists-item">
 									<div class="specialist">
-										<div class="specialist-foto">
-											<img src="../images/specialist3.png" width="216" height="216" alt="Специалист">
-										</div>
+											<a class="specialist-foto" href="#">
+												<img src="../images/specialist3.png" width="216" height="216" alt="Специалист">
+											</a>
 										<div class="specialist-name"><span>Севостьянова</span><br> Наталья Сергеевна</div>
 										<div class="specialist-info">
 											<div class="position">Коммерческий директор</div>
@@ -148,9 +149,9 @@
 
 								<div class="specialists-item">
 									<div class="specialist">
-										<div class="specialist-foto">
-											<img src="../images/specialist4.png" width="216" height="216" alt="Специалист">
-										</div>
+											<a class="specialist-foto" href="#">
+												<img src="../images/specialist4.png" width="216" height="216" alt="Специалист">
+											</a>
 										<div class="specialist-name"><span>Арутюнова</span><br> Татьяна Владимировна</div>
 										<div class="specialist-info">
 											<div class="position">Управляющая</div>
@@ -161,9 +162,9 @@
 
 								<div class="specialists-item">
 									<div class="specialist">
-										<div class="specialist-foto">
-											<img src="../images/specialist5.png" width="216" height="216" alt="Специалист">
-										</div>
+											<a class="specialist-foto" href="#">
+												<img src="../images/specialist5.png" width="216" height="216" alt="Специалист">
+											</a>
 										<div class="specialist-name"><span>Красная</span><br> Юлия Владимировна</div>
 										<div class="specialist-info">
 											<div class="position">Заведующая отделением Косметологии, врач-косметолог, врач-дерматолог, кандидат медицинских наук.</div>
@@ -182,9 +183,9 @@
 
 								<div class="specialists-item">
 									<div class="specialist">
-										<div class="specialist-foto">
-											<img src="../images/specialist6.png" width="216" height="216" alt="Специалист">
-										</div>
+											<a class="specialist-foto" href="#">
+												<img src="../images/specialist6.png" width="216" height="216" alt="Специалист">
+											</a>
 										<div class="specialist-name"><span>Василенко</span><br> Элина Александровна</div>
 										<div class="specialist-info">
 											<div class="position">Врач-дерматолог, врач-косметолог.</div>
@@ -203,9 +204,9 @@
 
 								<div class="specialists-item">
 									<div class="specialist">
-										<div class="specialist-foto">
-											<img src="../images/specialist7.png" width="216" height="216" alt="Специалист">
-										</div>
+											<a class="specialist-foto" href="#">
+												<img src="../images/specialist7.png" width="216" height="216" alt="Специалист">
+											</a>
 										<div class="specialist-name"><span>Гаунутдинова</span><br> Юлиана Игоревна</div>
 										<div class="specialist-info">
 											<div class="position">Врач-косметолог, врач-дерматолог</div>
@@ -224,9 +225,9 @@
 
 								<div class="specialists-item">
 									<div class="specialist">
-										<div class="specialist-foto">
-											<img src="../images/specialist8.png" width="216" height="216" alt="Специалист">
-										</div>
+											<a class="specialist-foto" href="#">
+												<img src="../images/specialist8.png" width="216" height="216" alt="Специалист">
+											</a>
 										<div class="specialist-name"><span>Геворков</span><br> Георгий Леванович</div>
 										<div class="specialist-info">
 											<div class="position">Пластический хирург, челюстно-лицевой хирург, кандидат медицинских наук, врач высшей категории</div>
@@ -241,9 +242,9 @@
 
 								<div class="specialists-item">
 									<div class="specialist">
-										<div class="specialist-foto">
-											<img src="../images/specialist9.png" width="216" height="216" alt="Специалист">
-										</div>
+											<a class="specialist-foto" href="#">
+												<img src="../images/specialist9.png" width="216" height="216" alt="Специалист">
+											</a>
 										<div class="specialist-name"><span>Гербич</span><br> Янина Владимировна</div>
 										<div class="specialist-info">
 											<div class="position">Медицинская сестра в косметологии</div>
@@ -258,9 +259,9 @@
 
 								<div class="specialists-item">
 									<div class="specialist">
-										<div class="specialist-foto">
-											<img src="../images/specialist10.png" width="216" height="216" alt="Специалист">
-										</div>
+											<a class="specialist-foto" href="#">
+												<img src="../images/specialist10.png" width="216" height="216" alt="Специалист">
+											</a>
 										<div class="specialist-name"><span>Гинзбург</span><br> Денис Сергеевич</div>
 										<div class="specialist-info">
 											<div class="position">Пластический хирург, эксперт anti age медицины</div>
@@ -279,9 +280,9 @@
 
 								<div class="specialists-item">
 									<div class="specialist">
-										<div class="specialist-foto">
-											<img src="../images/specialist11.png" width="216" height="216" alt="Специалист">
-										</div>
+											<a class="specialist-foto" href="#">
+												<img src="../images/specialist11.png" width="216" height="216" alt="Специалист">
+											</a>
 										<div class="specialist-name"><span>Елуферьева</span><br> Ольга Владимировна</div>
 										<div class="specialist-info">
 											<div class="position">Подолог</div>
@@ -300,9 +301,9 @@
 
 								<div class="specialists-item">
 									<div class="specialist">
-										<div class="specialist-foto">
-											<img src="../images/specialist12.png" width="216" height="216" alt="Специалист">
-										</div>
+											<a class="specialist-foto" href="#">
+												<img src="../images/specialist12.png" width="216" height="216" alt="Специалист">
+											</a>
 										<div class="specialist-name"><span>Зеленских</span><br> Надежда Сергеевна</div>
 										<div class="specialist-info">
 											<div class="position">Врач-косметолог, врач-дерматовенеролог</div>
@@ -321,9 +322,9 @@
 
 								<div class="specialists-item">
 									<div class="specialist">
-										<div class="specialist-foto">
-											<img src="../images/specialist13.png" width="216" height="216" alt="Специалист">
-										</div>
+											<a class="specialist-foto" href="#">
+												<img src="../images/specialist13.png" width="216" height="216" alt="Специалист">
+											</a>
 										<div class="specialist-name"><span>Иманилов</span><br> Александр Петрович</div>
 										<div class="specialist-info">
 											<div class="position">Пластический хирург, кандидат медицинских наук</div>
@@ -342,9 +343,9 @@
 
 								<div class="specialists-item">
 									<div class="specialist">
-										<div class="specialist-foto">
-											<img src="../images/specialist14.png" width="216" height="216" alt="Специалист">
-										</div>
+											<a class="specialist-foto" href="#">
+												<img src="../images/specialist14.png" width="216" height="216" alt="Специалист">
+											</a>
 										<div class="specialist-name"><span>Киселёва</span><br> Арина Андреевна</div>
 										<div class="specialist-info">
 											<div class="position">Косметолог</div>
@@ -363,9 +364,9 @@
 
 								<div class="specialists-item">
 									<div class="specialist">
-										<div class="specialist-foto">
-											<img src="../images/specialist15.png" width="216" height="216" alt="Специалист">
-										</div>
+											<a class="specialist-foto" href="#">
+												<img src="../images/specialist15.png" width="216" height="216" alt="Специалист">
+											</a>
 										<div class="specialist-name"><span>Кисель</span><br> Дмитрий Александрович</div>
 										<div class="specialist-info">
 											<div class="position">Cертифицированный пластический и реконструктивный хирург</div>
@@ -384,9 +385,9 @@
 
 								<div class="specialists-item">
 									<div class="specialist">
-										<div class="specialist-foto">
-											<img src="../images/specialist16.png" width="216" height="216" alt="Специалист">
-										</div>
+											<a class="specialist-foto" href="#">
+												<img src="../images/specialist16.png" width="216" height="216" alt="Специалист">
+											</a>
 										<div class="specialist-name"><span>Лебедев</span><br> Дмитрий Вячеславович</div>
 										<div class="specialist-info">
 											<div class="position">Врач-дерматовенеролог, врач-косметолог,	пластический хирург</div>
@@ -405,9 +406,9 @@
 
 								<div class="specialists-item">
 									<div class="specialist">
-										<div class="specialist-foto">
-											<img src="../images/specialist17.png" width="216" height="216" alt="Специалист">
-										</div>
+											<a class="specialist-foto" href="#">
+												<img src="../images/specialist17.png" width="216" height="216" alt="Специалист">
+											</a>
 										<div class="specialist-name"><span>Парфёнова</span><br> Ирина Александровна</div>
 										<div class="specialist-info">
 											<div class="position">Врач дерматовенеролог, врач косметолог</div>
@@ -422,9 +423,9 @@
 
 								<div class="specialists-item">
 									<div class="specialist">
-										<div class="specialist-foto">
-											<img src="../images/specialist18.png" width="216" height="216" alt="Специалист">
-										</div>
+											<a class="specialist-foto" href="#">
+												<img src="../images/specialist18.png" width="216" height="216" alt="Специалист">
+											</a>
 										<div class="specialist-name"><span>Самойлова</span><br> Майя Валерьевна</div>
 										<div class="specialist-info">
 											<div class="position">Врач-дерматолог, врач-косметолог</div>
@@ -444,9 +445,9 @@
 
 								<div class="specialists-item">
 									<div class="specialist">
-										<div class="specialist-foto">
-											<img src="../images/specialist19.png" width="216" height="216" alt="Специалист">
-										</div>
+											<a class="specialist-foto" href="#">
+												<img src="../images/specialist19.png" width="216" height="216" alt="Специалист">
+											</a>
 										<div class="specialist-name"><span>Соболева</span><br> Людмила Игоревна</div>
 										<div class="specialist-info">
 											<div class="position">Врач-дерматовенеролог, врач-косметолог</div>
@@ -465,9 +466,9 @@
 
 								<div class="specialists-item">
 									<div class="specialist">
-										<div class="specialist-foto">
-											<img src="../images/specialist20.png" width="216" height="216" alt="Специалист">
-										</div>
+											<a class="specialist-foto" href="#">
+												<img src="../images/specialist20.png" width="216" height="216" alt="Специалист">
+											</a>
 										<div class="specialist-name"><span>Тихомирова</span><br> Елена Евгеньевна</div>
 										<div class="specialist-info">
 											<div class="position">Операционная медсестра</div>
@@ -486,9 +487,9 @@
 
 								<div class="specialists-item">
 									<div class="specialist">
-										<div class="specialist-foto">
-											<img src="../images/specialist21.png" width="216" height="216" alt="Специалист">
-										</div>
+											<a class="specialist-foto" href="#">
+												<img src="../images/specialist21.png" width="216" height="216" alt="Специалист">
+											</a>
 										<div class="specialist-name"><span>Христич</span><br> Людмила Анатольевна</div>
 										<div class="specialist-info">
 											<div class="position">Массажист</div>
@@ -507,9 +508,9 @@
 
 								<div class="specialists-item">
 									<div class="specialist">
-										<div class="specialist-foto">
-											<img src="../images/specialist22.png" width="216" height="216" alt="Специалист">
-										</div>
+											<a class="specialist-foto" href="#">
+												<img src="../images/specialist22.png" width="216" height="216" alt="Специалист">
+											</a>
 										<div class="specialist-name"><span>Циркунов</span><br> Максим Владимирович</div>
 										<div class="specialist-info">
 											<div class="position">Анестезиолог, реаниматолог</div>
