--- a/index.html
+++ b/index.html
@@ -287,27 +287,56 @@
 								<a href="#">Медиа</a>
 							</div>
 
-							<section class="block-contacts">
-								<h2 class="contacts-title title">Контакты</h2>
-								<div class="contacts-wrapper">
-									<div class="contacts-town-switcher">
-										<div class="contacts-town active">Москва</div>
-										<div class="contacts-town">Екатеринбург</div>
-									</div>
-									<div class="contacts-stations">
-										<div class="contacts-station active">Таганская</div>
-										<div class="contacts-station">Новослободская</div>
-									</div>
-									<div class="contacts-info">
-										<div class="contacts-adress"><span>Пестовский пер., д.5</span><a href="">Схема</a></div>
-										<div class="contacts-working-hours"><span>пнд-вскр 9:00 - 21:00</span></div>
-										<div class="contacts-tel"><span>+7 (495) 266 79 57</span></div>
-									</div>
-									<div class="contacts-map">
-										<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2245.739820560401!2d37.657252615930254!3d55.74564948055145!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54ae94d6faf05%3A0x5ceb8230678431bb!2z0J_QtdGB0YLQvtCy0YHQutC40Lkg0L_QtdGALiwgNSwg0JzQvtGB0LrQstCwLCAxMDkwMDQ!5e0!3m2!1sru!2sru!4v1493530333661" allowfullscreen></iframe>
-									</div>
-								</div>
-							</section>
+					<section class="block-contacts">
+						<h2 class="contacts-title title">Контакты</h2>
+						<div class="contacts-wrapper">
+							<div class="contacts-town-switcher">
+								<div class="contacts-town active msk">Москва</div>
+								<div class="contacts-town ekb">Екатеринбург</div>
+							</div>
+
+							<div class="contacts-location msk">
+								<div class="contacts-station active taganskaya">Таганская</div>
+								<div class="contacts-station novoslobodskaya">Новослободская</div>
+							</div>
+
+							<div class="contacts-location ekb">
+								<div class="contacts-station active">ул. Маршала Жукова</div>
+							</div>
+
+							<div class="contacts-info novoslobodskaya">
+								<div class="contacts-adress"><span>ул. Краснопролетарская д. 16, стр. 11</span><a href="">Схема</a></div>
+								<div class="contacts-working-hours"><span>пнд-вскр 9:00 - 21:00</span></div>
+								<div class="contacts-tel"><span>+7 (495) 266-79-56</span></div>
+							</div>
+
+							<div class="contacts-info taganskaya">
+								<div class="contacts-adress"><span>Пестовский пер. д. 5</span><a href="">Схема</a></div>
+								<div class="contacts-working-hours"><span>пнд-вскр 9:00 - 21:00</span></div>
+								<div class="contacts-tel"><span>+7 (495) 266-79-56</span></div>
+							</div>
+
+							<div class="contacts-info ekb">
+								<div class="contacts-adress"><span>ул. Маршала Жукова, д. 13</span><a href="">Схема</a></div>
+								<div class="contacts-working-hours"><span>пнд-вскр 9:00 - 21:00</span></div>
+								<div class="contacts-tel"><span>+7 (495) 266-79-56</span></div>
+							</div>
+
+							<div class="contacts-map taganskaya">
+								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2245.739820560401!2d37.657252615930254!3d55.74564948055145!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54ae94d6faf05%3A0x5ceb8230678431bb!2z0J_QtdGB0YLQvtCy0YHQutC40Lkg0L_QtdGALiwgNSwg0JzQvtGB0LrQstCwLCAxMDkwMDQ!5e0!3m2!1sru!2sru!4v1493530333661" allowfullscreen></iframe>
+							</div>
+
+							<div class="contacts-map novoslobodskaya">
+								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2243.8489636523545!2d37.60462231593153!3d55.778494980560275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a114adced89%3A0x614181a7fb90d34c!2z0JrRgNCw0YHQvdC-0L_RgNC-0LvQtdGC0LDRgNGB0LrQsNGPINGD0LsuLCAxNtGBMTEsINCc0L7RgdC60LLQsCwgMTI3NDcz!5e0!3m2!1sru!2sru!4v1494865076976" allowfullscreen></iframe>
+							</div>
+
+							<div class="contacts-map ekb">
+								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2182.2316680303024!2d60.58164431626742!3d56.841969980858686!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x43c16e5e83e8b995%3A0x9970d6f90687a37!2z0YPQuy4g0JzQsNGA0YjQsNC70LAg0JbRg9C60L7QstCwLCAxMywg0JXQutCw0YLQtdGA0LjQvdCx0YPRgNCzLCDQodCy0LXRgNC00LvQvtCy0YHQutCw0Y8g0L7QsdC7LiwgNjIwMDE0!5e0!3m2!1sru!2sru!4v1494865163414" allowfullscreen></iframe>
+							</div>
+
+
+						</div>
+					</section>
 
 
 							<a class="content-appointment button appointment-js" href="#show">Записаться на приём</a>
@@ -320,6 +349,7 @@
 					<div class="modal-appointment-wrapper">
 						<div class="modal-appointment-title">Записаться на прием</div>
 						<form class="modal-appointment-form" name="appointment-form" method="post" action="#">
+							<div class="modal-appointment-close"></div>
 							<div class="form-group">
 								<input class="modal-appointment-name form-element" name="appointment-name" type="text" tabindex="1" placeholder="Имя">
 								<input class="modal-appointment-tel form-element" name="appointment-tel" type="tel" tabindex="2" placeholder="Телефон">
