--- a/pages/licenzies.html
+++ b/pages/licenzies.html
@@ -62,7 +62,7 @@
 							</ul>
 							<div class="header-contacts">
 								<div class="header-contacts-towns">
-									<span class="header-contacts-town active menu-town-js">Москва</span> / <span class="header-contacts-town menu-town-js">Екатеринбург</span>
+									<span class="header-contacts-town active menu-town-js msk">Москва</span> / <span class="header-contacts-town menu-town-js ekb">Екатеринбург</span>
 								</div>
 								<div class="header-contacts-tel msk menu-tel-js"><span>+7 (495) 266 79 57</span></div>
 								<div class="header-contacts-tel ekb menu-tel-js"><span>+7 (343) 302 2376</span></div>
@@ -89,13 +89,13 @@
 							<h3 class="licenzies-subtitle">Лицензия на терапевтическую деятельность № ЛО-77-000943</h3>
 
 							<div class="licenzies-item">
-								<a href="#lic1" class="lic1-js">
-									<img id="lic1" src="../images/lic1.jpg" width="279" height="397" alt="Лицензия1">
+								<a class="licenzies-image" href="../images/lic1.jpg" >
+									<img src="../images/lic1.jpg" width="279" height="397" alt="Лицензия1">
 								</a>
 							</div>
 							
 							<div class="licenzies-item">
-								<a href="#lic1-back" class="licenzies-js">
+								<a class="licenzies-image" href="../images/lic1-back.jpg">
 									<img id="lic1-back" src="../images/lic1-back.jpg" width="279"	height="397" alt="Лицензия1">
 								</a>
 							</div>
@@ -105,12 +105,12 @@
 						<div class="licenzies-items">
 							<h3 class="licenzies-subtitle">Лицензия на хирургическую деятельность № ЛО-77-003666</h3>
 							<div class="licenzies-item">
-								<a href="">
+								<a class="licenzies-image" href="../images/lic2.jpg">
 									<img src="../images/lic2.jpg" width="279" height="397" alt="Лицензия2">
 								</a>
 							</div>
 							<div class="licenzies-item">
-								<a href="">
+								<a class="licenzies-image" href="../images/lic2-back.jpg">
 									<img src="../images/lic2-back.jpg" width="279" height="397" alt="Лицензия2">
 								</a>
 							</div>
@@ -119,7 +119,7 @@
 						<div class="licenzies-items">
 							<h3 class="licenzies-subtitle">Лицензия № ЛО-77-01-007535</h3>
 							<div class="licenzies-item">
-								<a href="">
+								<a class="licenzies-image" href="../images/lic3.jpg">
 									<img src="../images/lic3.jpg" width="279" height="397" alt="Лицензия3">
 								</a>
 							</div>
@@ -145,6 +145,7 @@
 					<div class="modal-appointment-wrapper">
 						<div class="modal-appointment-title">Записаться на прием</div>
 						<form class="modal-appointment-form" name="appointment-form" method="post" action="#">
+							<div class="modal-appointment-close"></div>
 							<div class="form-group">
 								<input class="modal-appointment-name form-element" name="appointment-name" type="text" tabindex="1" placeholder="Имя">
 								<input class="modal-appointment-tel form-element" name="appointment-tel" type="tel" tabindex="2" placeholder="Телефон">
