--- a/pages/action.html
+++ b/pages/action.html
@@ -64,7 +64,7 @@
 							</ul>
 							<div class="header-contacts">
 								<div class="header-contacts-towns">
-									<span class="header-contacts-town active menu-town-js">Москва</span> / <span class="header-contacts-town menu-town-js">Екатеринбург</span>
+									<span class="header-contacts-town active menu-town-js msk">Москва</span> / <span class="header-contacts-town menu-town-js ekb">Екатеринбург</span>
 								</div>
 								<div class="header-contacts-tel msk menu-tel-js"><span>+7 (495) 266 79 57</span></div>
 								<div class="header-contacts-tel ekb menu-tel-js"><span>+7 (343) 302 2376</span></div>
@@ -179,6 +179,7 @@ TriPlex - всего за 49 900 </h3>
 					<div class="modal-appointment-wrapper">
 						<div class="modal-appointment-title">Записаться на прием</div>
 						<form class="modal-appointment-form" name="appointment-form" method="post" action="#">
+							<div class="modal-appointment-close"></div>
 							<div class="form-group">
 								<input class="modal-appointment-name form-element" name="appointment-name" type="text" tabindex="1" placeholder="Имя">
 								<input class="modal-appointment-tel form-element" name="appointment-tel" type="tel" tabindex="2" placeholder="Телефон">
